// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectionRecoveryRequest activated protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <div
      className="alert-activated"
      style={
        Object {
          "borderColor": "#37ad4b",
          "color": "#37ad4b",
        }
      }
    >
      <Icon
        icon={
          Object {
            "id": "activated",
          }
        }
      />
       Your Logion Trust Protection is active
    </div>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="ACTIVATED"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="ACTIVATED"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest activated recovery request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      You are now ready to claim the access to address 
      toRecover
      .
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="ACTIVATED"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="ACTIVATED"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <div
      className="alert-activated"
      style={
        Object {
          "borderColor": "#37ad4b",
          "color": "#37ad4b",
        }
      }
    >
      <Icon
        icon={
          Object {
            "id": "activated",
          }
        }
      />
       Your Logion Trust Protection is active
    </div>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="ACTIVATED"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="ACTIVATED"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      You are now ready to claim the access to address 
      toRecover
      .
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="ACTIVATED"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="ACTIVATED"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      Your Logion Trust Protection request has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process. Please note that, after the successful completion of one of your Legal Officer approval processes, you will be able to use all features provided by your logion account dashboard.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="PENDING"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  subTitle="Recovery process status"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      Your Logion Recovery request
       for account toRecover
       has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
          "email": "patrick@logion.network",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer1Status="PENDING"
      legalOfficer2={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
          "email": "g.grain@adrastee-lyon.fr",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer2Status="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
            "email": "patrick@logion.network",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
            "email": "g.grain@adrastee-lyon.fr",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
            "email": "alain.barland@auxilia-conseils.com",
            "name": "Alain Barland",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
    />
  </Frame>
</FullWidthPane>
`;
